# CongressFish

./: .env.example  .gitignore  .gitignore.additions  AGENT_BUILD_STATUS.md  CONGRESSFISH_PHASE1_BUILD_AGENTS.md  CONGRESSFISH_ROADMAP.md  Dockerfile  ENRICHMENT_STATUS.md  ENRICHMENT_SUMMARY.md  LAUNCH.md  LAUNCH_CHECKLIST.md  README.md  ROADMAP.md  START_LOCAL.md  SYSTEM_READY.md  SYSTEM_SETUP.md  build_batch.py  build_smart.py  docker-compose.yml  enrich_all_committees.py  package-lock.json  package.json  requirements-agents.txt  requirements.txt  test_build_agents.py  test_e2e.py  test_simulation.py  weball26.txt
backend/: pyproject.toml  requirements.txt  run.py
backend/agents/: __init__.py  build.py  build_executive.py  build_scotus.py  config.py  enrich_comprehensive.py  enrich_congress_members.py  enrich_ideology_direct.py  enrich_with_affiliations.py  enrich_with_biography.py  enrich_with_finance.py  enrich_with_wikipedia.py  generate_personas.py  import_personas_to_neo4j.py  orchestrator.py  refresh.py
backend/agents/apis/: __init__.py  ballotpedia.py  congress_gov.py  grok.py  openfec.py  oyez.py  propublica.py  unitedstates_project.py  voteview.py  wikipedia.py
backend/api/: simulation_api.py
backend/app/: __init__.py  config.py
backend/graph/: load_graph.py  neo4j_client.py  neo4j_schema.py
backend/scripts/: action_logger.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  test_profile_format.py
backend/simulation/: bill_discussion_engine.py  congress_simulator.py  persona_loader.py  pipeline.py
(+81 files in other folders)
